[tool.poetry]
name = "wpilib-ws-py"
version = "0.1.0"
description = "An implementation of the WPILib WebSocket protocol for Python"
authors = ["Patrick Brennan (AM2i9)"]
license = "MIT"
packages = [
    {include = "wpilib_ws"}
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
