[tool.poetry]
name = "wpilib-ws-py"
version = "0.3.0"
description = "An implementation of the WPILib WebSocket protocol for Python"
readme = "README.md"
authors = ["Patrick Brennan (AM2i9)"]
repository = "https://github.com/AM2i9/wpilib-ws-py"
keywords = ["wpilib", "websocket"]
license = "MIT"
include = ["LICENSE.md"]
packages = [
    {include = "wpilib_ws"}
]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
